# cli

./: CMakeLists.txt  HELP.md  LICENSE  REQUIREMENTS.md  TODO.md  build.sh  run.sh  uploadBinary.sh
.github/workflows/: build.yml  codeql-analysis.yml
src/: cli.cpp  config.hpp  including.hpp  logger.cpp  logger.hpp  parser.cpp  parser.hpp  utility.hpp
src/head/: buildsystem.hpp  commands.hpp  json.hpp  logger.hpp  parser.hpp  utility.hpp  web.hpp
src/head/generator/: project.hpp
src/impl/: buildsystem.cpp  commands.cpp  json.cpp  logger.cpp  parser.cpp  utility.cpp  web.cpp
src/impl/generator/: project.cpp
tools/: uploadBinary.py
